resolve accessibility issues

--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
 </head>
 
 <body>
-
-  <div class="bg-img" role="presentation"></div>
-  <article class="order">
-    <img src="images/illustration-hero.svg" alt="Hero illustation" class="order__img">
-    <div class="order__content">
-      <h1 class="order__title">Order Summary</h1>
-      <p class="order__description">
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-      <div class="flex-group order__subscription">
-        <div class="flex-group ">
-          <img src="images/icon-music.svg" alt="Music icon" class="music-icon">
-          <div>
-            <p class="order__subscription-plan">Annual Plan</p>
-            <p class="order__subscription-billing">$59.99/year</p>
+  <main>
+    <div class="bg-img" role="presentation"></div>
+    <article class="order">
+      <img src="images/illustration-hero.svg" alt="Hero illustation" class="order__img">
+      <div class="order__content">
+        <h1 class="order__title">Order Summary</h1>
+        <p class="order__description">
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+        <div class="flex-group order__subscription">
+          <div class="flex-group ">
+            <img src="images/icon-music.svg" alt="Music icon" class="music-icon">
+            <div>
+              <p class="order__subscription-plan">Annual Plan</p>
+              <p class="order__subscription-billing">$59.99/year</p>
+            </div>
           </div>
+          <a class="order__subscription-change">Change</a>
         </div>
-        <a class="order__subscription-change">Change</a>
+        <button class="proceed btn">Proceed to Payment</button>
+        <button class="cancel btn">Cancel Order</button>
       </div>
-      <button class="proceed btn">Proceed to Payment</button>
-      <button class="cancel btn">Cancel Order</button>
-    </div>
-  </article>
+    </article>
   </main>
 
 </body>
